# ft-printf

./: ._Makefile  .gitignore  CMakeLists.txt  Makefile  README.md  ft_p.c  ft_p.h  ft_printf.c  ft_printf.h  libft.h  main.c
ft_handlers/: ft_handlers.c  ft_handlers.h
ft_printf/lib/: lib.h  lib_get_apostrophe.c  lib_strjoinchr.c  lib_strjoinchr_end.c  lib_strjoinchr_start.c  lib_utoa_base.c  lib_wint_to_str.c  lib_write.c
ft_printf/parse_format/: parse_all.c  parse_flags.c  parse_minwidth.c  parse_precision.c
ft_printf/put_format/: put_char.c  put_decimal.c  put_form.c  put_form.h  put_format.c  put_signed.c  put_string.c  put_unsigned.c
ft_put/: ft_put.h  ft_putchar.c  ft_putmem.c  ft_putnbr.c  ft_putstr.c  ft_putwchar.c  ft_write.c
libft/: Makefile  author  ft_abs.c  ft_atoi_base.c  ft_itoa_base.c  ft_memcpy.c  ft_nbrlen.c  ft_str_contains_chr.c  ft_strcut.c  ft_strfjoin.c  ft_strjoin.c  ft_strjoin_free.c  ft_utoa_base.c  ft_wchar_to_str.c  ft_wint_to_str.c  libft.h
libft/ft_printf/: ft_printf.c  ft_printf.h
libft/ft_printf/lib/: lib.h  lib_get_apostrophe.c  lib_nbrjoinchr_count.c  lib_nbrlen.c  lib_putstr.c  lib_strclear.c  lib_strjoinchr.c  lib_strjoinchr_end.c  lib_strjoinchr_start.c  lib_utoa_base.c  lib_wchar_to_str.c  lib_wint_to_str.c  lib_write.c  (+2 more)
parser/: format_parser.c  parse_all.c  parse_all.h  parse_flags.c  parse_modifier.c  parse_precision.c  parse_specificator.c
put_form/: put_apostrophe.c  put_char.c  put_decimal.c  put_form.c  put_form.h  put_signed.c  put_string.c  put_unsigned.c
put_form_info/: put_form_info.c  put_form_info.h
(+62 files in other folders)
